AFS_Dev/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Target_OI__c</fullName>
        <label>Target OI%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Service Group</label>
        <picklist>
            <picklistValues>
                <fullName>01 - AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - BPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - IO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - TC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - IC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Work__c</fullName>
        <label>Type of Work</label>
        <picklist>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourcing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Target_OI__c</columns>
        <columns>HAS_DEF_QTY_SCHEDULE</columns>
        <columns>HAS_DEF_REV_SCHEDULE</columns>
        <columns>PRODUCT2.QTY_SCHEDULE_NUMBER</columns>
        <columns>PRODUCT2.REV_SCHEDULE_NUMBER</columns>
        <columns>PRODUCT2.QTY_SCHEDULE_TYPE</columns>
        <columns>PRODUCT2.QTY_SCHEDULE_INTERVAL</columns>
        <columns>PRODUCT2.REV_SCHEDULE_TYPE</columns>
        <columns>PRODUCT2.REV_SCHEDULE_INTERVAL</columns>
        <filterScope>Everything</filterScope>
        <label>All Financials</label>
    </listViews>
</CustomObject>